src/ui/layout/snapshots/kvn_tui__ui__layout__overlay__tests__overlays_render_at_the_minimum_terminal_size@onboarding.snap
---
source: src/ui/layout/overlay.rs
expression: "snapshot_terminal(&model, MIN_TERMINAL_WIDTH, MIN_TERMINAL_HEIGHT)"
---
┌ Traffic ───────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connectio │
└──────┌──────────────────────────────────────────────────────┐──────┘
┌ Profi│                 Getting started · 7/9                │──────┐
│ └ Alp│                  Set up auto-connect                 │1:443 │
│      │ Auto-connect reconnects to your last used profile    │      │
│      │ when the kvn daemon starts.                          │      │
│      │ First, set up polkit:                                │      │
│      │ sudo kvn setup --polkit                              │      │
│      │ Reboot once, then press Shift+A to toggle            │      │
│      │ auto-connect.                                        │      │
│      │              󰌑 continue · y copy command             │      │
│      └──────────────────────────────────────────────────────┘      │
└────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                              DoH  Global
[70x15]
