src/ui/layout/snapshots/kvn_tui__ui__layout__overlay__tests__overlays_render_at_the_minimum_terminal_size@settings-menu.snap
---
source: src/ui/layout/overlay.rs
expression: "snapshot_terminal(&model, MIN_TERMINAL_WIDTH, MIN_TERMINAL_HEIGHT)"
---
┌ Traffic ───────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connectio │
└─────────────────┌───────────────────────────────┐──────────────────┘
┌ Profiles ───────│           Settings            │──────────────────┐
│ └ Alpha         │                               │less  1.1.1.1:443 │
│                 │        c  Connection         │                  │
│                 │        d  DNS                │                  │
│                 │        i  Interface          │                  │
│                 │        r  Routing            │                  │
│                 │                               │                  │
│                 │           q/󱊷 close           │                  │
│                 └───────────────────────────────┘                  │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                              DoH  Global
[70x15]
